Minor style fix

--- a/main.css
+++ b/main.css
@@ -163,7 +163,7 @@ a {
 	cursor: pointer;
 	padding: 5px;
 	width: 60%;
-	margin: 0 auto;
+	margin: 10px auto;
 	font-size: 25px;
 	border-radius: 3px;
 }
