--- a/main.css
+++ b/main.css
@@ -33,6 +33,7 @@ button {
 	padding: 10px 20px;
 	border-radius: 5px;
 	user-select: none;
+	-webkit-user-select: none;
 }
 
 #none-btn {
@@ -43,10 +44,12 @@ button {
 	color:rgb(71, 97, 199);
 	cursor: pointer;
 	user-select: none;
+	-webkit-user-select: none;;
 }
 
 label {
 	user-select: none;
+	-webkit-user-select: none;;
 }
 
 a {
